--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -48,6 +48,7 @@
       {% endif %}
 
         <p class="announcement-bar__message">{{ section.settings.message_text | escape }}</p>
+        <a class="announcement-bar-close-icon" href=""><img src="{{ 'x-icon.png' | asset_url }}" /></a>
 
       {% if section.settings.message_link == blank %}
         </div>
@@ -80,9 +81,17 @@
             {%- assign img_url = section.settings.logo | img_url: '1x1' | replace: '_1x1.', '_{width}x.' -%}
             <a href="{{ routes.root_url }}" class="site-header__logo-image{% if section.settings.align_logo == 'center' %} site-header__logo-image--centered{% endif %}">
               {% capture logo_alt %}{{ section.settings.logo.alt | default: shop.name }}{% endcapture %}
-              <img class="lazyload js"
+              <!-- <img class="lazyload js"
                    src="{{ section.settings.logo | img_url: '300x300' }}"
                    data-src="{{ img_url }}"
+                   data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
+                   data-aspectratio="{{ section.settings.logo.aspect_ratio }}"
+                   data-sizes="auto"
+                   alt="{{ logo_alt | escape }}"
+                   style="max-width: {{ section.settings.logo_max_width }}px"> -->
+                   <img class="lazyload js"
+                   src="{{ 'logo.svg' | asset_url }}"
+                   data-src="{{ 'logo.svg' | asset_url }}"
                    data-widths="[180, 360, 540, 720, 900, 1080, 1296, 1512, 1728, 2048]"
                    data-aspectratio="{{ section.settings.logo.aspect_ratio }}"
                    data-sizes="auto"
@@ -115,27 +124,35 @@
       <div class="grid__item {% if section.settings.align_logo == 'left' %}medium-up--one-quarter{% else %}medium-up--one-third medium-up--push-one-third{% endif %} text-right site-header__icons{% if shop.customer_accounts_enabled %} site-header__icons--plus{% endif %}">
         <div class="site-header__icons-wrapper">
 
-          <button type="button" class="btn--link site-header__icon site-header__search-toggle js-drawer-open-top">
+          <!-- SEARCH -->
+          <!-- <button type="button" class="btn--link site-header__icon site-header__search-toggle js-drawer-open-top">
             {% include 'icon-search' %}
             <span class="icon__fallback-text">{{ 'layout.navigation.search' | t }}</span>
-          </button>
+          </button> -->
+
+          <a href="/faq" class="site-header__icon site-header__account">
+            <span class="secondary-nav-link">Help</span>
+          </a>
 
           {% if shop.customer_accounts_enabled %}
             {% if customer %}
               <a href="{{ routes.account_url }}" class="site-header__icon site-header__account">
-                {% include 'icon-login' %}
+                <!-- {% include 'icon-login' %} -->
+                <span class="secondary-nav-link">{{ 'layout.customer.account' | t }}</span>
                 <span class="icon__fallback-text">{{ 'layout.customer.account' | t }}</span>
               </a>
             {% else %}
               <a href="{{ routes.account_login_url }}" class="site-header__icon site-header__account">
-                {% include 'icon-login' %}
+                <!-- {% include 'icon-login' %} -->
+                <span class="secondary-nav-link">Login</span>
                 <span class="icon__fallback-text">{{ 'layout.customer.log_in' | t }}</span>
               </a>
             {% endif %}
           {% endif %}
 
           <a href="{{ routes.cart_url }}" class="site-header__icon site-header__cart">
-            {% include 'icon-cart' %}
+            <!-- {% include 'icon-cart' %} -->
+            <img src="{{ 'cart-icon.svg' | asset_url }}" />
             <span class="icon__fallback-text">{{ 'layout.cart.title' | t }}</span>
             <div id="CartCount" class="site-header__cart-count{% if cart.item_count == 0 %} hide{% endif %}" data-cart-count-bubble>
               <span data-cart-count>{{ cart.item_count }}</span>
