homepage basically done

--- a/layout/theme.liquid
+++ b/layout/theme.liquid
@@ -125,7 +125,8 @@
       {{ content_for_layout }}
     </main>
 
-    {% section 'footer' %}
+    <!-- {% section 'footer' %} -->
+    {% section 'custom-footer' %}
 
     <div id="slideshow-info" class="visually-hidden" aria-hidden="true">
       {{- 'sections.slideshow.navigation_instructions' | t -}}
