--- a/sections/header.liquid
+++ b/sections/header.liquid
@@ -135,7 +135,7 @@
             <span class="icon__fallback-text">{{ 'layout.navigation.search' | t }}</span>
           </button> -->
 
-          <a href="/faq" class="site-header__icon site-header__account custom-header-link">
+          <a href="/pages/help" class="site-header__icon site-header__account custom-header-link">
             <span class="secondary-nav-link">Help</span>
           </a>
 
