--- a/templates/page.liquid
+++ b/templates/page.liquid
@@ -1,13 +1,20 @@
-<div class="page-width">
-  <div class="grid">
-    <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
-      <div class="section-header text-center">
-        <h1>{{ page.title }}</h1>
-      </div>
+{% if page.title == "About Us" %}
+  {% section 'about-us-template' %}
+{% else if page.title == "Help" %}
+  {% section 'help-template' %}
+{% else %}
+  <div class="page-width">
+    <div class="grid">
+      <div class="grid__item medium-up--five-sixths medium-up--push-one-twelfth">
 
-      <div class="rte">
-        {{ page.content }}
+        <div class="section-header text-center">
+          <h1>{{ page.title }}</h1>
+        </div>
+
+        <div class="rte">
+          {{ page.content }}
+        </div>
       </div>
     </div>
   </div>
-</div>
+{% endif %}
