--- a/templates/product.liquid
+++ b/templates/product.liquid
@@ -2,17 +2,18 @@
   The contents of the product.liquid template can be found in /sections/product-template.liquid
 {% endcomment %}
 
-{% section 'product-template' %}
-{% section 'product-recommendations' %}
-
 {% if collection %}
-  <div class="text-center return-link-wrapper page-width">
-    <a href="{{ collection.url }}" class="btn btn--secondary btn--has-icon-before return-link">
+  <div class="return-link-wrapper page-width">
+    <a href="{{ collection.url }}" class="btn--has-icon-before return-link">
       {% include 'icon-arrow-left' %}
       {{ 'products.product.back_to_collection' | t: title: collection.title }}
     </a>
   </div>
 {% endif %}
+
+{% section 'product-template' %}
+{% section 'product-recommendations' %}
+
 
 <script>
   // Override default values of shop.strings for each template.
