--- a/sections/help-template.liquid
+++ b/sections/help-template.liquid
@@ -15,31 +15,31 @@
             </div>
         </div>
     </div>
-    <div class="page-width">
+    <div id="sticky-nav" class="page-width">
         <div class="about-us-jump-to-link-container">
-            <a href="#our-boots-section" id="returns-policies">
+            <a href="#returns-policies-section" id="returns-policies">
                 Returns & Policies
             </a>
-            <a href="#our-people-section" id="boot-fit-guide">
+            <a href="#boot-fit-guide-section" id="boot-fit-guide">
                 Boot Fit Guide
             </a>
-            <a href="#our-story-section" id="product-care">
+            <a href="#product-care-section" id="product-care">
                 Product Care
             </a>
-            <a href="#our-story-section" id="faq">
+            <a href="#faq-section" id="faq">
                 FAQ'S
             </a>
             <!-- MOBILE -->
-            <a href="#our-boots-section" id="returns-policies-mobile">
-                Boots
+            <a href="#returns-policies-section" id="returns-policies-mobile">
+                Returns
             </a>
-            <a href="#our-people-section" id="boot-fit-guide-mobile">
-                People
+            <a href="#boot-fit-guide-section" id="boot-fit-guide-mobile">
+                Fit
             </a>
-            <a href="#our-story-section" id="product-care-mobile">
-                Story
+            <a href="#product-care-section" id="product-care-mobile">
+                Care
             </a>
-            <a href="#our-story-section" id="faq-mobile">
+            <a href="#faq-section" id="faq-mobile">
                 FAQ'S
             </a>
         </div>
@@ -120,7 +120,7 @@
         <div class="boot-fit-guide-touts-section">
             <div class="tout-container">
                 <div class="tout-box"></div>
-                <h3>Heading</h3>
+                <h3>Instep</h3>
                 <p>
                     I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art tousled
                     selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha hella disrupt
@@ -130,7 +130,7 @@
             </div>
             <div class="tout-container">
                 <div class="tout-box"></div>
-                <h3>Heading</h3>
+                <h3>Ball of the Foot</h3>
                 <p>
                     I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art tousled
                     selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha hella disrupt
@@ -141,7 +141,7 @@
             </div>
             <div class="tout-container">
                 <div class="tout-box"></div>
-                <h3>Heading</h3>
+                <h3>Heel Slip</h3>
                 <p>
                     I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art tousled
                     selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha hella disrupt
@@ -157,7 +157,7 @@
             </button>
         </div>
     </div>
-    <div id="boot-care-guide-section" class="text-center">
+    <div id="product-care-section" class="text-center">
         <h2 class="about-us-section-title">Boot Care Guide</h2>
         <div class="description-container">
             <p>
@@ -199,51 +199,57 @@
                 </p>
             </div>
         </div>
-        <div class="faq-section page-width">
+    </div>
+    <div id="faq-section" class="faq-section page-width">
+        <div class="faq-heading-section">
             <h2>Frequently Asked Questions</h2>
-            <p>
-                I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art tousled
-                selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha hella disrupt portland
-                synth. Pitchfork post-ironic gluten-free unicorn. Kogi pork belly tacos tilde 3 wolf moon. Hell of
-                iPhone 3 wolf moon ramps hashtag poutine kinfolk sustainable snackwave.
-            </p>
-
-            <div class="collapisbles-section">
-                <div class="custom-collapsible-block">
-                    <button type="button" class="custom-collapsible">
-                        This is a question people ask alot
-                        <img src="{{ 'plus.svg' | asset_url }}" alt="">
-                    </button>
-                    <div class="collapsible-content">
-                        <p>
-                            I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art
-                            tousled selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha
-                            hella disrupt portland synth. Pitchfork post-ironic gluten-free unicorn. Kogi pork belly
-                            tacos tilde 3 wolf moon. Hell of iPhone 3 wolf moon ramps hashtag poutine kinfolk
-                            sustainable snackwave.
-                        </p>
-                    </div>
+            <div class="description-container">
+                <p>
+                    I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art tousled
+                    selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha hella disrupt
+                    portland
+                    synth. Pitchfork post-ironic gluten-free unicorn. Kogi pork belly tacos tilde 3 wolf moon. Hell
+                    of
+                    iPhone 3 wolf moon ramps hashtag poutine kinfolk sustainable snackwave.
+                </p>
+            </div>
+        </div>
+        <div class="collapisbles-section">
+            <div class="custom-collapsible-block">
+                <button type="button" class="custom-collapsible">
+                    This is a question people ask alot
+                    <img src="{{ 'plus.svg' | asset_url }}" alt="">
+                </button>
+                <div class="collapsible-content">
+                    <p>
+                        I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art
+                        tousled selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha
+                        hella disrupt portland synth. Pitchfork post-ironic gluten-free unicorn. Kogi pork belly
+                        tacos tilde 3 wolf moon. Hell of iPhone 3 wolf moon ramps hashtag poutine kinfolk
+                        sustainable snackwave.
+                    </p>
                 </div>
-                <div class="custom-collapsible-block">
-                    <button type="button" class="custom-collapsible">
-                        This is a question people ask alot
-                        <img src="{{ 'plus.svg' | asset_url }}" alt="">
-                    </button>
-                    <div class="collapsible-content">
-                        <p>
-                            I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art
-                            tousled selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha
-                            hella disrupt portland synth. Pitchfork post-ironic gluten-free unicorn. Kogi pork belly
-                            tacos tilde 3 wolf moon. Hell of iPhone 3 wolf moon ramps hashtag poutine kinfolk
-                            sustainable snackwave.
-                        </p>
-                    </div>
+            </div>
+            <div class="custom-collapsible-block">
+                <button type="button" class="custom-collapsible">
+                    This is a question people ask alot
+                    <img src="{{ 'plus.svg' | asset_url }}" alt="">
+                </button>
+                <div class="collapsible-content">
+                    <p>
+                        I'm baby la croix tacos bitters cold-pressed gastropub aesthetic banh mi woke street art
+                        tousled selvage. Pinterest hexagon cardigan truffaut activated charcoal locavore sriracha
+                        hella disrupt portland synth. Pitchfork post-ironic gluten-free unicorn. Kogi pork belly
+                        tacos tilde 3 wolf moon. Hell of iPhone 3 wolf moon ramps hashtag poutine kinfolk
+                        sustainable snackwave.
+                    </p>
                 </div>
             </div>
         </div>
     </div>
 </div>
 
+<script src="https://code.jquery.com/jquery-3.5.1.min.js" integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
 <script>
     window.onload = function () {
         document.getElementById("returns-policies").className = "about-us-jump-to-link-active";
@@ -291,6 +297,21 @@
             }
         });
     }
+
+    // JQUERY STIKY NAV 
+    $(document).ready(function () {
+	    var navpos = $('#sticky-nav').offset();
+	    console.log(navpos.top);
+	    $(window).bind('scroll', function () {
+	        if ($(window).scrollTop() > navpos.top) {
+	            // $('#sticky-nav').addClass('sticky-nav');
+	            // $('#sticky-nav').removeClass('page-width');l;'./'
+	        } else {
+	            // $('#sticky-nav').removeClass('sticky-nav');
+	            // $('#sticky-nav').addClass('page-width');
+	        }
+	    });
+	});
 </script>
 
 
